project-ai-mern-image-generation-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: project-ai-mern-image-generation-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/project-ai-mern-image-generation-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/project-ai-mern-image-generation-default: "true"
